Fix fitting of column on small devices

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -64,7 +64,7 @@ mark {
 }
 
 .widget {
-    width: 100%;
+    width: calc(100% - 0.5rem);
     margin: 0.25rem;
 }
 
